--- a/ELibrary.Application/ELibrary.Application.csproj
+++ b/ELibrary.Application/ELibrary.Application.csproj
@@ -7,15 +7,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ELibrary.Domain\ELibrary.Domain.csproj"/>
-        <ProjectReference Include="..\ELibrary.Infrastructure.Persistence\ELibrary.Infrastructure.Persistence.csproj"/>
-        <ProjectReference Include="..\ELibrary.Application.Contracts\ELibrary.Application.Contracts.csproj"/>
-        <ProjectReference Include="..\ELibrary.Infrastructure\ELibrary.Infrastructure.csproj"/>
+        <ProjectReference Include="..\ELibrary.Domain\ELibrary.Domain.csproj" />
+        <ProjectReference Include="..\ELibrary.Infrastructure.Persistence\ELibrary.Infrastructure.Persistence.csproj" />
+        <ProjectReference Include="..\ELibrary.Application.Contracts\ELibrary.Application.Contracts.csproj" />
+        <ProjectReference Include="..\ELibrary.Infrastructure\ELibrary.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="MediatR" Version="10.0.1"/>
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1"/>
+        <PackageReference Include="MediatR" Version="10.0.1" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Books" />
+      <Folder Include="Books\Commands\UpdateBookDetail" />
     </ItemGroup>
 
 </Project>
