--- a/ELibrary.UI/ELibrary.UI.csproj
+++ b/ELibrary.UI/ELibrary.UI.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2"/>
         <PackageReference Include="MediatR" Version="10.0.1"/>
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
